--- a/ApiProjeKampi.WebUI/ApiProjeKampi.WebUI.csproj
+++ b/ApiProjeKampi.WebUI/ApiProjeKampi.WebUI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Requirements\TestimonialsYummyJson.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\yummy-red-1.0.0\assets\.DS_Store" />
     <None Include="wwwroot\yummy-red-1.0.0\assets\img\.DS_Store" />
     <None Include="wwwroot\yummy-red-1.0.0\assets\vendor\.DS_Store" />
